# AAA

./: LICENSE  README.md  mean.py  out.txt  report_test.py  requirements.txt  run.py  test.sh
astar_planner/: CMakeLists.txt  package.xml
astar_planner/include/: astar_planner.hpp
barnVFH/: README.md  Singularityfile.def  VFH126out.txt  VFH23out.txt  VFHout.txt  dynarun.py  out.txt  run.py  runtest.py  test.sh
barnVFH/navigation_pkg/: CMakeLists.txt  package.xml
barnVFH/navigation_pkg/launch/: VFH_launch.launch
barnVFH/navigation_pkg/rviz/: rviz.rviz
esdf_mapping/: CMakeLists.txt  package.xml
esdf_mapping/configs/: gmapping.yaml
esdf_mapping/launch/: gmapping.launch
esdf_mapping/src/: esdf.cpp  scan_preprocessor.cpp
global_planner/: CMakeLists.txt  package.xml  setup.py
global_planner/config/: astar_planner_params.yaml
global_planner/launch/: astar_planner.launch
global_planner/scripts/: path_smoother_node
global_planner/src/: astar_planner.cpp  gauss_smooth_3d.py  main.cpp  path_smoother_node.py
global_planner/src/global_planner/: gauss_smooth_3d.py  path_smoother_node.py
gmapping_pkg/: CMakeLists.txt  package.xml
jackal/jackal_control/config/: robot_localization.yaml
jackal_helper/configs/params/: teb_local_planner_params.yaml
jackal_helper/configs/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
jackal_helper/worlds/DynaBARN/crazy/: world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_15.world  world_16.world  world_19.world  world_2.world  world_3.world  world_4.world  world_6.world  world_7.world  world_8.world
jackal_helper/worlds/DynaBARN/easy/: world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_2.world  (+7 more)
local_planner/: CMakeLists.txt  package.xml  setup.py
local_planner/launch/: VFH_launch.launch  VFH_test.launch  navigation.launch
local_planner/rviz/: rviz.rviz
local_planner/scripts/: Nav-VFH.py  Nav-VFH1.py  Nav-VFH2.py  VFHtest.py  aaaVFH.py  test.py
local_planner/src/navigation_pkg/: navigation_utils.py
mapping/: CMakeLists.txt  package.xml
mapping/include/mapping/: goal_layer.h  map_ros.h  obstacle_layer.h  unknown_layer.h
mapping/launch/: aaamapping.launch
mapping/src/: goal_layer.cpp  main.cpp  map_ros.cpp  obstacle_layer.cpp  unknown_layer.cpp
the-barn-challenge/: README.md  out.txt  run.py  test.sh
the-barn-challenge/jackal_helper/launch/: gazebotest.launch
(+31 files in other folders)
